// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolCallBlock default-prop snapshots (G5) > collapsed with a Bash input 1`] = `
<div
  class="rounded-lg border border-border-subtle bg-[#1e1e1e] text-sm my-1 overflow-hidden"
>
   
  <button
    aria-expanded="false"
    class="w-full flex items-center gap-2 px-3 py-1.5 hover:bg-[#252525] cursor-pointer text-left"
    data-testid="tool-header"
  >
    <svg
      class="text-text-muted flex-shrink-0"
      fill="currentColor"
      height="12"
      viewBox="0 0 256 256"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <svg
      class="text-text-secondary flex-shrink-0"
      data-testid="tool-icon-wrench"
      fill="currentColor"
      height="16"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M226.76,69a8,8,0,0,0-12.84-2.88l-40.3,37.19-17.23-3.7-3.7-17.23,37.19-40.3A8,8,0,0,0,187,29.24,72,72,0,0,0,88,96,72.34,72.34,0,0,0,94,124.94L33.79,177c-.15.12-.29.26-.43.39a32,32,0,0,0,45.26,45.26c.13-.13.27-.28.39-.42L131.06,162A72,72,0,0,0,232,96,71.56,71.56,0,0,0,226.76,69ZM160,152a56.14,56.14,0,0,1-27.07-7,8,8,0,0,0-9.92,1.77L67.11,211.51a16,16,0,0,1-22.62-22.62L109.18,133a8,8,0,0,0,1.77-9.93,56,56,0,0,1,58.36-82.31l-31.2,33.81a8,8,0,0,0-1.94,7.1L141.83,108a8,8,0,0,0,6.14,6.14l26.35,5.66a8,8,0,0,0,7.1-1.94l33.81-31.2A56.06,56.06,0,0,1,160,152Z"
      />
    </svg>
    <span
      class="text-text-primary font-semibold"
    >
      Bash
    </span>
    <span
      class="text-text-muted truncate flex-1 min-w-0"
    >
      ls -la
    </span>
  </button>
</div>
`;

exports[`ToolCallBlock default-prop snapshots (G5) > expanded after clicking the header 1`] = `
<div
  class="rounded-lg border border-border-subtle bg-[#1e1e1e] text-sm my-1 overflow-hidden"
>
   
  <button
    aria-expanded="true"
    class="w-full flex items-center gap-2 px-3 py-1.5 hover:bg-[#252525] cursor-pointer text-left"
    data-testid="tool-header"
  >
    <svg
      class="text-text-muted flex-shrink-0"
      fill="currentColor"
      height="12"
      viewBox="0 0 256 256"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
      />
    </svg>
    <svg
      class="text-text-secondary flex-shrink-0"
      data-testid="tool-icon-wrench"
      fill="currentColor"
      height="16"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M226.76,69a8,8,0,0,0-12.84-2.88l-40.3,37.19-17.23-3.7-3.7-17.23,37.19-40.3A8,8,0,0,0,187,29.24,72,72,0,0,0,88,96,72.34,72.34,0,0,0,94,124.94L33.79,177c-.15.12-.29.26-.43.39a32,32,0,0,0,45.26,45.26c.13-.13.27-.28.39-.42L131.06,162A72,72,0,0,0,232,96,71.56,71.56,0,0,0,226.76,69ZM160,152a56.14,56.14,0,0,1-27.07-7,8,8,0,0,0-9.92,1.77L67.11,211.51a16,16,0,0,1-22.62-22.62L109.18,133a8,8,0,0,0,1.77-9.93,56,56,0,0,1,58.36-82.31l-31.2,33.81a8,8,0,0,0-1.94,7.1L141.83,108a8,8,0,0,0,6.14,6.14l26.35,5.66a8,8,0,0,0,7.1-1.94l33.81-31.2A56.06,56.06,0,0,1,160,152Z"
      />
    </svg>
    <span
      class="text-text-primary font-semibold"
    >
      Bash
    </span>
    <span
      class="text-text-muted truncate flex-1 min-w-0"
    >
      ls -la
    </span>
  </button>
  <div
    class="border-t border-border-subtle px-3 py-2 bg-[#161616]"
    data-testid="tool-detail"
  >
     
    <pre
      class="text-xs text-text-secondary whitespace-pre-wrap break-all overflow-auto max-h-60"
    >
      {
  "command": "ls -la",
  "description": "List files"
}
    </pre>
  </div>
</div>
`;
